# tara-report

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env  .env.example  Dockerfile  Dockerfile.tara-api  Dockerfile.upload-parser  README.md  docker-compose.yml  pyproject.toml  requirements-tara-api.txt  requirements-upload-parser.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  (+4 more)
backend/app/common/config/: settings.py
backend/app/common/constants/: __init__.py  enums.py
backend/app/common/database/: __init__.py  minio.py  mysql.py
backend/app/common/models/: __init__.py  report.py
backend/app/common/schemas/: __init__.py  report.py
backend/app/generators/: __init__.py  pdf_generator.py
backend/app/repositories/: __init__.py
backend/data-service/: Dockerfile  __init__.py  database.py  main.py  minio_client.py  models.py  pyproject.toml
backend/data-service/app/: __init__.py  main.py
backend/data-service/app/repositories/: __init__.py
backend/init-db/: 01-init.sql
backend/report-service/: Dockerfile  __init__.py  main.py  pyproject.toml
backend/report-service/app/: __init__.py  main.py
backend/report-service/app/common/: __init__.py
backend/report-service/app/generators/: __init__.py  excel_generator.py  pdf_generator.py
backend/shared/: __init__.py  models.py
backend/tara-data-service/: Dockerfile  pyproject.toml
backend/tara-data-service/app/: __init__.py  config.py  main.py
backend/tara-data-service/app/api/: routes.py
backend/tara-data-service/app/common/: __init__.py  minio_client.py
backend/tara-data-service/app/repositories/: report.py
backend/tara-data-service/app/services/: __init__.py  data.py
backend/tara-data-service/app/v1/: __init__.py
backend/tara-report-service/: Dockerfile  pyproject.toml
backend/tara-report-service/app/: __init__.py  config.py  main.py
backend/tara-report-service/app/api/: __init__.py  routes.py
backend/tara-report-service/app/common/: __init__.py  database.py  minio_client.py  models.py
backend/tara-report-service/app/generators/: __init__.py  excel.py  pdf.py
backend/tara_api/: __init__.py  main.py  models.py  tara_excel_generator.py  tara_pdf_generator.py  upload_parser_client.py
backend/upload_parser/: README.md  __init__.py  app.py  config.py
backend/upload_parser/api/: __init__.py  routes.py  services.py
backend/upload_parser/db/: __init__.py  database.py  models.py
backend/upload_parser/models/: __init__.py  schemas.py
backend/upload_parser/storage/: __init__.py  minio_service.py
(+64 files in other folders)
