[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tara-api"
version = "1.0.0"
description = "TARA Report Generator API - 威胁分析和风险评估报告生成服务"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "TARA Team", email = "tara@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "openpyxl>=3.1.2",
    "pillow>=10.2.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.5.0",
    "aiofiles>=23.2.1",
    "reportlab>=4.0.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "minio>=7.2.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]
db = [
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "minio>=7.2.0",
]

[project.scripts]
tara-api = "app.main:run_server"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
