[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tara-data-service"
version = "1.0.0"
description = "TARA Data Service - 数据上传、解析和存储服务"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "minio>=7.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
